# kylejcaron.github.io

./: .gitignore  .nojekyll  Gemfile  README.md  _config.yml  _quarto.yml  about.html  about.markdown  about.md  archive.html  blog.html  blog.xml  custom.scss  index.html  index.markdown  index.qmd  index.xml  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css  theme.scss
_includes/: custom-head.html
_posts/: 2022-04-03-explainable-ai-is-not-causal.md  2022-04-04-explainable_ai_not_quite.md  2022-04-05-ab-test-duration.md  2022-04-11-uncertainty_intervals_over_pvals.md  2022-04-17-out-of-sample-pymc.md
docs/: index.html  robots.txt  search.json  sitemap.xml
posts/: 2022-04-03-explainable-ai-is-not-causal.html  2022-04-03-explainable-ai-is-not-causal.qmd  2022-04-05-ab-test-duration.html  2022-04-05-ab-test-duration.qmd  2022-04-11-uncertainty_intervals_over_pvals.html  2022-04-11-uncertainty_intervals_over_pvals.qmd  2022-04-17-out-of-sample-pymc.html  2022-04-17-out-of-sample-pymc.qmd  2025-03-06-metric-choice.html  2025-03-06-metric-choice.qmd  2025-03-06-multicollinearity-misconceptions.html  2025-03-06-multicollinearity-misconceptions.qmd  2025-04-01-scope-double-ml.html  2025-04-01-scope-double-ml.qmd  _metadata.yml  designing_experiments_in_industry.html  diff_in_diff.html  experiment_design.html  experiment_design.qmd  weibull_survival_tools.html
posts/numpyro_dim_labelling/: 2025-02-22-numpyro-dim_labels.html  2025-02-22-numpyro-dim_labels.qmd  2025-02-23-numpyro-dim_labels.html  2025-02-23-numpyro-dim_labels.qmd  pyproject.toml
(+24 files in other folders)
