[tool.poetry]
name = "kylejcaron-github-io"
version = "0.1.0"
description = ""
authors = ["Kyle Caron"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
pandas = "^2.2.0"
pymc = "^5.10.3"
numpyro = "^0.13.2"
pyro-ppl = "^1.8.6"
jax = "^0.4.24"
torch = "^2.2.0"
statsmodels = "^0.14.1"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
jupyter = "^1.0.0"
graphviz = "^0.20.1"
lifelines = "^0.28.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.7"
pyarrow = "^15.0.0"
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
